force-app/main/default/objects/VTXY_ProviderLicense__c/VTXY_ProviderLicense__c.object-meta.xml
<CustomObject>
    <description>Returned as provider allocation summary</description>
    <label>Provider License</label>
    <nameField>
        <label>Provider License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>