force-app/main/default/objects/VTXY_ProviderLicense__c/fields/Assigned_User_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User_External_Id__c</fullName>
    <label>Assigned_User_External_Id</label>
    <length>23</length>
    <type>Text</type>
</CustomField>