force-app/main/default/objects/VTXY_ProviderLicense__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <label>Effective_From</label>
    <type>Date</type>
</CustomField>