force-app/main/default/objects/VTXY_ProviderLicense__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <label>Effective_To</label>
    <type>Date</type>
</CustomField>