force-app/main/default/objects/VTXY_ProviderLicense__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License_Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AgentSeat</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
            <value>
                <fullName>Recording</fullName>
            </value>
            <value>
                <fullName>Supervisor.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>