force-app/main/default/objects/VTXY_ProviderLicense__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telephony provider.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>