force-app/main/default/objects/VTXY_ProviderLicense__c/fields/Provider_License_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_License_Id__c</fullName>
    <label>Provider_License_Id</label>
    <length>23</length>
    <required>true</required>
    <type>Text</type>
</CustomField>