force-app/main/default/objects/VTXY_ProviderLicense__c/fields/Provider_Metadata_JSON__c.field-meta.xml
<CustomField>
    <fullName>Provider_Metadata_JSON__c</fullName>
    <label>Provider_Metadata_JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>