force-app/main/default/objects/VTXY_ProviderLicense__c/fields/Subscriber_Org_del__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Org_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscriber Org</label>
    <referenceTo>VTXY_SubscriberOrg__c</referenceTo>
    <relationshipLabel>Provider Licenses</relationshipLabel>
    <relationshipName>Provider_Licenses_del</relationshipName>
    <type>Lookup</type>
</CustomField>